# design-pattern-recognition

./: .gitignore  LICENSE  README.md
creational_patterns/abstract_factory/: Cargo.toml
creational_patterns/abstract_factory/src/: abstract_product.rs  door.rs  lib.rs  main.rs  map_site.rs  maze.rs  maze_factory.rs  maze_game.rs  room.rs  wall.rs
creational_patterns/builder/: Cargo.toml
creational_patterns/prototype/: Cargo.toml
factory_method/: Cargo.toml
graphics/: Cargo.toml  readme.md
graphics/src/: main.rs
singleton/: Cargo.toml
