[package]
name = "graphics"
version = "0.1.0"
authors = ["Robert Turner Jr <georob23@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

interpolation = "0.2"
rand = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
piston_window = "0.89"