[package]
name = "graphics"
version = "0.1.0"
authors = ["Robert Turner Jr <georob23@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

interpolation = "0.2"
rand = "0.6"

piston = "0.48.0"
piston2d-graphics = "0.32.0"
pistoncore-glutin_window = "0.61.0"
piston2d-opengl_graphics = "0.65.0"
piston_window = "0.89"